# elastic-ai.equi-checker

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
c_funcs/adder/build_compile_loader/: cffi_module.c
elasticai/equichecker/: __init__.py  equivalence.py  loader.py
tests/: test_clamp_property.py  test_equivalence_example.py  test_intentional_fail.py  test_windower.py
